--- a/langs/ca-ES.json
+++ b/langs/ca-ES.json
@@ -34,6 +34,7 @@
   "MESSAGE/REPLAY/CONVERT_SUCCESS": "Macro convertit correctament! Troba'l amb els teus altres macros",
   "MESSAGE/REPLAY/SAVE": "Vols desar els canvis al teu macro?",
   "MESSAGE/KEYBINDS/EMPTY": "Si us plau, introdueix primer una tecla d'accés",
+  "MESSAGE/KEYBINDS/UNBINDABLE": "",
   "ICONIC/DISABLE": "",
   "ICONIC/EFFECTS": "",
   "ICONIC/GENERAL": "",
@@ -97,6 +98,10 @@
   "BYPASS": "Bypass",
   "BYPASS/HACK_ANTI_KICK": "Anti-Expulsió",
   "BYPASS/HACK_ANTI_KICK/TIP": "Evita ser bloquejat de jugar certs nivells",
+  "BYPASS/HACK_CHALLENGE": "",
+  "BYPASS/HACK_CHALLENGE/TIP": "",
+  "BYPASS/HACK_KEYMASTER": "",
+  "BYPASS/HACK_KEYMASTER/TIP": "",
   "BYPASS/HACK_MAIN_LEVELS": "Nivells Principals",
   "BYPASS/HACK_MAIN_LEVELS/TIP": "Desbloqueja els nivells demons principals",
   "BYPASS/HACK_MUSIC_UNLOCKER": "Personalitzador de Música",
@@ -348,6 +353,10 @@
   "LEVEL/HACK_AUTO_START_POS/TIP": "Coŀloca StartPos's automàticament als portals",
   "LEVEL/CBF/HACK_CBF": "Click Between Frames",
   "LEVEL/CBF/HACK_CBF/TIP": "Commuta «Click Between Frames» de Syzzi (ha d'estar instaŀlat!)",
+  "LEVEL/CBF/HACK_CBF_VANILLA": "",
+  "LEVEL/CBF/HACK_CBF_VANILLA/TIP": "",
+  "LEVEL/CBF/HACK_COS_VANILLA": "",
+  "LEVEL/CBF/HACK_COS_VANILLA/TIP": "",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "Click on Steps",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "Només registra les entrades amb precisió de 240 TPS, mantenint la física original",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Ometre Límit de Punts de Control",
@@ -446,6 +455,7 @@
   "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX": "Hitbox Alineada amb l'Eix",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX/TIP": "Mostra la hitbox alineat amb eixos en objectes girats al costat del seu hitbox orientat",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/FILL": "Omplir Hitboxes",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/HIDE_USED": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/HAZARDS/CHECKBOX": "Perills",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY": "Opacitat",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY/PRE": "Opacitat",
@@ -453,6 +463,7 @@
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PASSABLE/CHECKBOX": "Transitable",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER": "Jugador",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER_COLLISION": "Bloc de Coŀlisió del Jugador",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER_ROTATION": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SECTION": "Mostrar Només Actius",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SOLIDS/CHECKBOX": "Sòlids",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SPECIALS/CHECKBOX": "Especials",
@@ -578,6 +589,8 @@
   "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "Amagar Extres a la Pantalla Final",
   "INTERFACE/HACK_HIDE_MENU_SNOW": "Amagar Neu al menú",
   "INTERFACE/HACK_HIDE_PAUSE_ICONIC": "Amagar «Iconic» al Menú de Pausa",
+  "INTERFACE/HACK_HIDE_ROBSVAULT": "",
+  "INTERFACE/HACK_HIDE_ROBSVAULT/TIP": "",
   "SPEEDHACK": "Speedhack",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK": "Activat",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK/TIP": "Alenteix el joc globalment per un multiplicador establert",
@@ -707,6 +720,8 @@
   "STATUS/CLOCK/DROPDOWN/TWELVE_HOUR": "12 Hores",
   "STATUS/FRAME/ENABLED": "Comptador de Fotogrames",
   "STATUS/POSITION/ENABLED": "Posició",
+  "STATUS/VELOCITY/ENABLED": "",
+  "STATUS/DEAD/ENABLED": "",
   "STATUS/REPLAY_STATE/ENABLED": "Estat de Reproducció",
   "STATUS/SESSION_TIME/ENABLED": "Temps de Sessió",
   "REPLAY": "Reproducció",
