--- a/langs/en-GB.json
+++ b/langs/en-GB.json
@@ -98,6 +98,10 @@
   "BYPASS": "Bypass",
   "BYPASS/HACK_ANTI_KICK": "Anti-Kick",
   "BYPASS/HACK_ANTI_KICK/TIP": "Prevents you being blocked from playing certain levels",
+  "BYPASS/HACK_CHALLENGE": "Challenge Level",
+  "BYPASS/HACK_CHALLENGE/TIP": "Unlocks \"The Challenge\" within the Vault of Secrets",
+  "BYPASS/HACK_KEYMASTER": "Keymaster",
+  "BYPASS/HACK_KEYMASTER/TIP": "Unlocks the Keymaster room within the Vault of Secrets",
   "BYPASS/HACK_MAIN_LEVELS": "Main Levels",
   "BYPASS/HACK_MAIN_LEVELS/TIP": "Unlocks main demon levels",
   "BYPASS/HACK_MUSIC_UNLOCKER": "Music Customiser",
@@ -349,6 +353,10 @@
   "LEVEL/HACK_AUTO_START_POS/TIP": "Automatically places StartPos's at portals",
   "LEVEL/CBF/HACK_CBF": "Click Between Frames",
   "LEVEL/CBF/HACK_CBF/TIP": "Toggles Click Between Frames by Syzzi (must be installed!)",
+  "LEVEL/CBF/HACK_CBF_VANILLA": "Click Between Steps",
+  "LEVEL/CBF/HACK_CBF_VANILLA/TIP": "Toggles the Click Between Steps in-game setting",
+  "LEVEL/CBF/HACK_COS_VANILLA": "Click on Steps",
+  "LEVEL/CBF/HACK_COS_VANILLA/TIP": "Toggles the Click on Steps in-game setting",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "Click on Steps",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "Only registers inputs with 240 TPS precision, keeping vanilla physics",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Checkpoint Limit Bypass",
@@ -447,6 +455,7 @@
   "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX": "Show Axis-Aligned",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX/TIP": "Shows the axis-aligned hitbox on rotated objects alongside their oriented hitbox",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/FILL": "Fill Hitboxes",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/HIDE_USED": "Hide Activated Objects",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/HAZARDS/CHECKBOX": "Hazards",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY": "Opacity",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY/PRE": "Opacity",
@@ -454,6 +463,7 @@
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PASSABLE/CHECKBOX": "Passable",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER": "Player",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER_COLLISION": "Player Collision Block",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER_ROTATION": "Player Rotation",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SECTION": "Show Active Only",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SOLIDS/CHECKBOX": "Solids",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SPECIALS/CHECKBOX": "Specials",
@@ -579,6 +589,8 @@
   "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "Hide Endscreen Extras",
   "INTERFACE/HACK_HIDE_MENU_SNOW": "Hide Menu Snow",
   "INTERFACE/HACK_HIDE_PAUSE_ICONIC": "Hide Iconic on Pause",
+  "INTERFACE/HACK_HIDE_ROBSVAULT": "Hide RobsVault Shortcut",
+  "INTERFACE/HACK_HIDE_ROBSVAULT/TIP": "Hides the main level RobsVault shortcut. Made by Beat",
   "SPEEDHACK": "Speedhack",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK": "Enabled",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK/TIP": "Slows down the game globally by a set multiplier",
@@ -615,7 +627,7 @@
   "UTILITY": "Utility",
   "UTILITY/CLICKS/P1": "P1 Click",
   "UTILITY/CLICKS/P2": "P2 Click",
-  "UTILITY/DEV_TOOLS": "Open DevTools",
+  "UTILITY/DEV_TOOLS": "Toggle DevTools",
   "UTILITY/DEV_TOOLS/TIP": "Opens Geode DevTools, requires the mod to be installed",
   "UTILITY/DIRECTIONAL/P1_LEFT": "Left",
   "UTILITY/DIRECTIONAL/P1_RIGHT": "Right",
@@ -708,6 +720,8 @@
   "STATUS/CLOCK/DROPDOWN/TWELVE_HOUR": "12-hour",
   "STATUS/FRAME/ENABLED": "Frame Counter",
   "STATUS/POSITION/ENABLED": "Position",
+  "STATUS/VELOCITY/ENABLED": "Velocity",
+  "STATUS/DEAD/ENABLED": "Dead",
   "STATUS/REPLAY_STATE/ENABLED": "Replay State",
   "STATUS/SESSION_TIME/ENABLED": "Session Time",
   "REPLAY": "Replay",
