--- a/langs/eu-ES.json
+++ b/langs/eu-ES.json
@@ -34,6 +34,7 @@
   "MESSAGE/REPLAY/CONVERT_SUCCESS": "Makroa arrakastaz bihurtuta! Zure beste makroekin aurkitu ahal duzu",
   "MESSAGE/REPLAY/SAVE": "Zure macro-an aldaketak gorde nahi duzu?",
   "MESSAGE/KEYBINDS/EMPTY": "Mesedez, lehenik lasterbide bat sar ezazu",
+  "MESSAGE/KEYBINDS/UNBINDABLE": "",
   "ICONIC/DISABLE": "Itzali",
   "ICONIC/EFFECTS": "Efektuak",
   "ICONIC/GENERAL": "Orokorra",
@@ -97,6 +98,10 @@
   "BYPASS": "Bypass",
   "BYPASS/HACK_ANTI_KICK": "Kanporatzerik Ez",
   "BYPASS/HACK_ANTI_KICK/TIP": "Zenbait mailetatik kanporatzea sahiesten zaitu",
+  "BYPASS/HACK_CHALLENGE": "",
+  "BYPASS/HACK_CHALLENGE/TIP": "",
+  "BYPASS/HACK_KEYMASTER": "",
+  "BYPASS/HACK_KEYMASTER/TIP": "",
   "BYPASS/HACK_MAIN_LEVELS": "Maila Nagusiak",
   "BYPASS/HACK_MAIN_LEVELS/TIP": "Demon maila nagusiak desblokeatzen ditu.",
   "BYPASS/HACK_MUSIC_UNLOCKER": "Musika Desblokeatu",
@@ -348,6 +353,10 @@
   "LEVEL/HACK_AUTO_START_POS/TIP": "Portaletan automatikoki StartPos kokatzen ditu",
   "LEVEL/CBF/HACK_CBF": "Click Between Frames",
   "LEVEL/CBF/HACK_CBF/TIP": "Syzzi-k sortutako «Click Between Frames»-en etengailua (jadanik jaitsita egin behar da!)",
+  "LEVEL/CBF/HACK_CBF_VANILLA": "",
+  "LEVEL/CBF/HACK_CBF_VANILLA/TIP": "",
+  "LEVEL/CBF/HACK_COS_VANILLA": "",
+  "LEVEL/CBF/HACK_COS_VANILLA/TIP": "",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "Click on Steps",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "Sarrerak 240 TPS-ko zehaztasunarekin bakarrik erregistratzea egiten ditu, jatorrizko fisikak mantenduz",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Checkpoint Mugaren Bypass",
@@ -446,6 +455,7 @@
   "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX": "Ardatzetara Lerrokatutako Hitbox-ak",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX/TIP": "Biratutako objektuetan, ardatzetara lerrokatutako hitbox-ak beraien buruen hitbox biratuak bata bestearen gainean erakusten ditu",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/FILL": "Hitbox-ak Bete",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/HIDE_USED": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/HAZARDS/CHECKBOX": "Arriskuak",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY": "Gardentasuna",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY/PRE": "%",
@@ -453,6 +463,7 @@
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PASSABLE/CHECKBOX": "Zeharkagarriak",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER": "Jokalaria",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER_COLLISION": "Jokalariaren Talka-Blokea",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER_ROTATION": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SECTION": "Aktiboak Erakutsi Bakarrik",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SOLIDS/CHECKBOX": "Solidoak",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SPECIALS/CHECKBOX": "Bereziak",
@@ -578,6 +589,8 @@
   "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "Amaiera-Pantailatik Gehigarriak Ezkutatu",
   "INTERFACE/HACK_HIDE_MENU_SNOW": "Menuaren Elurra Ezkutatu",
   "INTERFACE/HACK_HIDE_PAUSE_ICONIC": "Pausa-Menuan «Iconic» Ezkutatu",
+  "INTERFACE/HACK_HIDE_ROBSVAULT": "",
+  "INTERFACE/HACK_HIDE_ROBSVAULT/TIP": "",
   "SPEEDHACK": "Speedhack",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK": "Gaituta",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK/TIP": "Biderkatzaile baten arabera, joku osoa moteltzen edo bizkortzen du",
@@ -707,6 +720,8 @@
   "STATUS/CLOCK/DROPDOWN/TWELVE_HOUR": "12 ordukoa",
   "STATUS/FRAME/ENABLED": "Fotograma-Kontadorea",
   "STATUS/POSITION/ENABLED": "Posizioa",
+  "STATUS/VELOCITY/ENABLED": "",
+  "STATUS/DEAD/ENABLED": "",
   "STATUS/REPLAY_STATE/ENABLED": "Replay Egoera",
   "STATUS/SESSION_TIME/ENABLED": "Sesio-Denbora",
   "REPLAY": "Replay",
