--- a/langs/hu-HU.json
+++ b/langs/hu-HU.json
@@ -34,6 +34,7 @@
   "MESSAGE/REPLAY/CONVERT_SUCCESS": "Sikeresen betöltöttük a visszajátszást! Benne lesz mostantól a listádban.",
   "MESSAGE/REPLAY/SAVE": "Biztosan lemented a változtatásaidat a visszajátszásodban?",
   "MESSAGE/KEYBINDS/EMPTY": "Előbb adj meg egy gyorskombinációt.",
+  "MESSAGE/KEYBINDS/UNBINDABLE": "",
   "ICONIC/DISABLE": "",
   "ICONIC/EFFECTS": "",
   "ICONIC/GENERAL": "",
@@ -97,6 +98,10 @@
   "BYPASS": "Kitérő",
   "BYPASS/HACK_ANTI_KICK": "",
   "BYPASS/HACK_ANTI_KICK/TIP": "",
+  "BYPASS/HACK_CHALLENGE": "",
+  "BYPASS/HACK_CHALLENGE/TIP": "",
+  "BYPASS/HACK_KEYMASTER": "",
+  "BYPASS/HACK_KEYMASTER/TIP": "",
   "BYPASS/HACK_MAIN_LEVELS": "A 3 alap démon feloldása",
   "BYPASS/HACK_MAIN_LEVELS/TIP": "Feloldja az alap 3 Démon pályákat",
   "BYPASS/HACK_MUSIC_UNLOCKER": "Zene Feloldó",
@@ -348,6 +353,10 @@
   "LEVEL/HACK_AUTO_START_POS/TIP": "Egy StartPOS-t le fog rakni minden portálnál.",
   "LEVEL/CBF/HACK_CBF": "Kattintás képkockák között",
   "LEVEL/CBF/HACK_CBF/TIP": "Bekapcsolja a Click Between Frames modot amit Syzzi készített. (Előtte le kell tölteni Geode-ban!)",
+  "LEVEL/CBF/HACK_CBF_VANILLA": "",
+  "LEVEL/CBF/HACK_CBF_VANILLA/TIP": "",
+  "LEVEL/CBF/HACK_COS_VANILLA": "",
+  "LEVEL/CBF/HACK_COS_VANILLA/TIP": "",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "Kattintás a képkockákon",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "240 képkockánként fog frissülni a játékod, megtartva a vanilla játék fizikáit.",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Ellenörzőpont Limit",
@@ -446,6 +455,7 @@
   "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX/TIP": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/FILL": "Hitboxok kitöltése",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/HIDE_USED": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/HAZARDS/CHECKBOX": "Veszélyes",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY": "Átlátszatlanság",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY/PRE": "Átlátszatlanság",
@@ -453,6 +463,7 @@
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PASSABLE/CHECKBOX": "Átmehető",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER": "Játékos",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER_COLLISION": "",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER_ROTATION": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SECTION": "Szekció",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SOLIDS/CHECKBOX": "Szilárd",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SPECIALS/CHECKBOX": "Speciális",
@@ -578,6 +589,8 @@
   "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "",
   "INTERFACE/HACK_HIDE_MENU_SNOW": "",
   "INTERFACE/HACK_HIDE_PAUSE_ICONIC": "",
+  "INTERFACE/HACK_HIDE_ROBSVAULT": "",
+  "INTERFACE/HACK_HIDE_ROBSVAULT/TIP": "",
   "SPEEDHACK": "Speedhack",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK": "Speedhack",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK/TIP": "Lelassítja/felgyorsítja a játékot",
@@ -707,6 +720,8 @@
   "STATUS/CLOCK/DROPDOWN/TWELVE_HOUR": "12 órás idő",
   "STATUS/FRAME/ENABLED": "Képkocka",
   "STATUS/POSITION/ENABLED": "Pozíció",
+  "STATUS/VELOCITY/ENABLED": "",
+  "STATUS/DEAD/ENABLED": "",
   "STATUS/REPLAY_STATE/ENABLED": "Visszajátszási státusz",
   "STATUS/SESSION_TIME/ENABLED": "",
   "REPLAY": "Visszajátszás",
