--- a/langs/it-IT.json
+++ b/langs/it-IT.json
@@ -34,6 +34,7 @@
   "MESSAGE/REPLAY/CONVERT_SUCCESS": "Macro convertita con successo!",
   "MESSAGE/REPLAY/SAVE": "Vuoi salvare i cambiamenti eseguiti alla macro?",
   "MESSAGE/KEYBINDS/EMPTY": "Prima inserire un tasto",
+  "MESSAGE/KEYBINDS/UNBINDABLE": "",
   "ICONIC/DISABLE": "Disabilita",
   "ICONIC/EFFECTS": "Effetti",
   "ICONIC/GENERAL": "Generale",
@@ -97,6 +98,10 @@
   "BYPASS": "Bypass",
   "BYPASS/HACK_ANTI_KICK": "Anti-espulsione",
   "BYPASS/HACK_ANTI_KICK/TIP": "Ti impedisce di essere bloccato a giocare certi livelli",
+  "BYPASS/HACK_CHALLENGE": "",
+  "BYPASS/HACK_CHALLENGE/TIP": "",
+  "BYPASS/HACK_KEYMASTER": "",
+  "BYPASS/HACK_KEYMASTER/TIP": "",
   "BYPASS/HACK_MAIN_LEVELS": "Livelli Principali",
   "BYPASS/HACK_MAIN_LEVELS/TIP": "Sblocca i Demon principali",
   "BYPASS/HACK_MUSIC_UNLOCKER": "Customizer Musica",
@@ -348,6 +353,10 @@
   "LEVEL/HACK_AUTO_START_POS/TIP": "Posiziona automaticamente gli StartPos in corrispondenza dei portali",
   "LEVEL/CBF/HACK_CBF": "Click Between Frames",
   "LEVEL/CBF/HACK_CBF/TIP": "Attiva Click Between Frames di Syzzi (deve essere installato!)",
+  "LEVEL/CBF/HACK_CBF_VANILLA": "",
+  "LEVEL/CBF/HACK_CBF_VANILLA/TIP": "",
+  "LEVEL/CBF/HACK_COS_VANILLA": "",
+  "LEVEL/CBF/HACK_COS_VANILLA/TIP": "",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "Click su Step",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "Registra gli input solo con precisione a 240 TPS, mantenendo la fisica vanilla",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Bypass Limite Checkpoint",
@@ -446,6 +455,7 @@
   "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX": "Mostra Allineamento Assi",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX/TIP": "Mostra la hitbox allineata agli assi sugli oggetti ruotati insieme alla loro hitbox orientata",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/FILL": "Riempimento Hitbox",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/HIDE_USED": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/HAZARDS/CHECKBOX": "Pericoli",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY": "Opacità",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY/PRE": "Opacità",
@@ -453,6 +463,7 @@
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PASSABLE/CHECKBOX": "Attraversabili",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER": "Giocatore",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER_COLLISION": "Collisione Giocatore",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER_ROTATION": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SECTION": "Sezione",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SOLIDS/CHECKBOX": "Solidi",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SPECIALS/CHECKBOX": "Speciali",
@@ -578,6 +589,8 @@
   "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "Nascondi Extra a fine livello",
   "INTERFACE/HACK_HIDE_MENU_SNOW": "Nascondi Neve nel menu",
   "INTERFACE/HACK_HIDE_PAUSE_ICONIC": "Nascondi Icone in pausa",
+  "INTERFACE/HACK_HIDE_ROBSVAULT": "",
+  "INTERFACE/HACK_HIDE_ROBSVAULT/TIP": "",
   "SPEEDHACK": "Speedhack",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK": "Attivato",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK/TIP": "Rallenta il gioco di un coefficiente",
@@ -707,6 +720,8 @@
   "STATUS/CLOCK/DROPDOWN/TWELVE_HOUR": "12 ore",
   "STATUS/FRAME/ENABLED": "Contatore Frame",
   "STATUS/POSITION/ENABLED": "Posizione",
+  "STATUS/VELOCITY/ENABLED": "",
+  "STATUS/DEAD/ENABLED": "",
   "STATUS/REPLAY_STATE/ENABLED": "Stato del replay",
   "STATUS/SESSION_TIME/ENABLED": "Session time",
   "REPLAY": "Replay",
