--- a/langs/ko-KR.json
+++ b/langs/ko-KR.json
@@ -34,6 +34,7 @@
   "MESSAGE/REPLAY/CONVERT_SUCCESS": "매크로가 성공적으로 변환되었습니다. 다른 매크로와 함께 찾아보세요.",
   "MESSAGE/REPLAY/SAVE": "매크로의 변경 사항을 저장하시겠습니까?",
   "MESSAGE/KEYBINDS/EMPTY": "먼저 키를 설정해 주세요.",
+  "MESSAGE/KEYBINDS/UNBINDABLE": "",
   "ICONIC/DISABLE": "비활성화",
   "ICONIC/EFFECTS": "이펙트",
   "ICONIC/GENERAL": "일반",
@@ -97,6 +98,10 @@
   "BYPASS": "우회",
   "BYPASS/HACK_ANTI_KICK": "안티-킥",
   "BYPASS/HACK_ANTI_KICK/TIP": "특정 레벨을 플레이할 때 차단되는 것을 방지합니다.",
+  "BYPASS/HACK_CHALLENGE": "",
+  "BYPASS/HACK_CHALLENGE/TIP": "",
+  "BYPASS/HACK_KEYMASTER": "",
+  "BYPASS/HACK_KEYMASTER/TIP": "",
   "BYPASS/HACK_MAIN_LEVELS": "메인 레벨",
   "BYPASS/HACK_MAIN_LEVELS/TIP": "메인 데몬 레벨을 잠금 해제합니다.",
   "BYPASS/HACK_MUSIC_UNLOCKER": "음악 잠금 해제",
@@ -348,6 +353,10 @@
   "LEVEL/HACK_AUTO_START_POS/TIP": "포탈에 스타트포스를 자동으로 배치합니다.",
   "LEVEL/CBF/HACK_CBF": "Click Between Frames",
   "LEVEL/CBF/HACK_CBF/TIP": "Click Between Frames를 켜거나 끕니다. by Syzzi (설치가 필요합니다!)",
+  "LEVEL/CBF/HACK_CBF_VANILLA": "",
+  "LEVEL/CBF/HACK_CBF_VANILLA/TIP": "",
+  "LEVEL/CBF/HACK_COS_VANILLA": "",
+  "LEVEL/CBF/HACK_COS_VANILLA/TIP": "",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "스탭에서 클릭",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "240 TPS 정밀도의 입력만 감지하며, 기본 물리를 유지합니다.",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "체크포인트 제한 우회",
@@ -446,6 +455,7 @@
   "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX": "축 정렬 표시",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX/TIP": "회전된 오브첵트의 방향성 히트박스와 함께 축 정렬 히트박스를 표시합니다.",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/FILL": "히트박스 채우기",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/HIDE_USED": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/HAZARDS/CHECKBOX": "위험",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY": "불투명도",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY/PRE": "불투명도",
@@ -453,6 +463,7 @@
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PASSABLE/CHECKBOX": "통과 가능",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER": "플레이어",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER_COLLISION": "플레이어 충돌 차단",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER_ROTATION": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SECTION": "활성 상태만 표시",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SOLIDS/CHECKBOX": "고체",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SPECIALS/CHECKBOX": "특수",
@@ -578,6 +589,8 @@
   "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "엔드스크린 추가 기능 숨기기",
   "INTERFACE/HACK_HIDE_MENU_SNOW": "메뉴 눈 숨기기",
   "INTERFACE/HACK_HIDE_PAUSE_ICONIC": "일시 정지 시 아이콘 숨기기",
+  "INTERFACE/HACK_HIDE_ROBSVAULT": "",
+  "INTERFACE/HACK_HIDE_ROBSVAULT/TIP": "",
   "SPEEDHACK": "스피드핵",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK": "활성화됨",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK/TIP": "설정된 배수로 게임 전체 속도를 느리게 합니다.",
@@ -707,6 +720,8 @@
   "STATUS/CLOCK/DROPDOWN/TWELVE_HOUR": "12시간 형식",
   "STATUS/FRAME/ENABLED": "프레임 카운터",
   "STATUS/POSITION/ENABLED": "위치",
+  "STATUS/VELOCITY/ENABLED": "",
+  "STATUS/DEAD/ENABLED": "",
   "STATUS/REPLAY_STATE/ENABLED": "리플레이 상태",
   "STATUS/SESSION_TIME/ENABLED": "세션 시간",
   "REPLAY": "리플레이",
