--- a/langs/ru-RU.json
+++ b/langs/ru-RU.json
@@ -34,6 +34,7 @@
   "MESSAGE/REPLAY/CONVERT_SUCCESS": "Макрос успешно сконвертирован! Вы можете найти его рядом с остальными макросами",
   "MESSAGE/REPLAY/SAVE": "Вы хотите сохранить изменения макроса?",
   "MESSAGE/KEYBINDS/EMPTY": "Пожалуйста, сначала введите горячую клавишу",
+  "MESSAGE/KEYBINDS/UNBINDABLE": "",
   "ICONIC/DISABLE": "Выключить",
   "ICONIC/EFFECTS": "Эффекты",
   "ICONIC/GENERAL": "Главное",
@@ -97,6 +98,10 @@
   "BYPASS": "Обход",
   "BYPASS/HACK_ANTI_KICK": "Анти-кик",
   "BYPASS/HACK_ANTI_KICK/TIP": "Предотвращает кик с определённых уровней",
+  "BYPASS/HACK_CHALLENGE": "",
+  "BYPASS/HACK_CHALLENGE/TIP": "",
+  "BYPASS/HACK_KEYMASTER": "",
+  "BYPASS/HACK_KEYMASTER/TIP": "",
   "BYPASS/HACK_MAIN_LEVELS": "Официальные уровни",
   "BYPASS/HACK_MAIN_LEVELS/TIP": "Открывает доступ к основным уровням",
   "BYPASS/HACK_MUSIC_UNLOCKER": "Настройка музыки",
@@ -348,6 +353,10 @@
   "LEVEL/HACK_AUTO_START_POS/TIP": "Автоматически ставит точки возрождения внутри порталов",
   "LEVEL/CBF/HACK_CBF": "Клики меж кадров (CBF)",
   "LEVEL/CBF/HACK_CBF/TIP": "Включает Click Between Frames от Syzzi (Должен быть установлен!)",
+  "LEVEL/CBF/HACK_CBF_VANILLA": "",
+  "LEVEL/CBF/HACK_CBF_VANILLA/TIP": "",
+  "LEVEL/CBF/HACK_COS_VANILLA": "",
+  "LEVEL/CBF/HACK_COS_VANILLA/TIP": "",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "Кликать в тики",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "Регистрирует нажатия 240 раз в секунду, сохраняет ванильную физику",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Без лимита чекпоинтов",
@@ -446,6 +455,7 @@
   "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX": "Выровнить по оси",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX/TIP": "Показывает выровненные по оси хитбоксы у повёрнутых объектов",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/FILL": "Заполнять хитбоксы их цветом",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/HIDE_USED": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/HAZARDS/CHECKBOX": "Опасные",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY": "Прозрачность",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY/PRE": "Прозрачность",
@@ -453,6 +463,7 @@
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PASSABLE/CHECKBOX": "Проходимые",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER": "Игрок",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER_COLLISION": "Колизия соприкосновения",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER_ROTATION": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SECTION": "Только активные",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SOLIDS/CHECKBOX": "Твёрдые",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SPECIALS/CHECKBOX": "Специальные",
@@ -578,6 +589,8 @@
   "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "Скрыть экстра",
   "INTERFACE/HACK_HIDE_MENU_SNOW": "Скрыть снег в меню",
   "INTERFACE/HACK_HIDE_PAUSE_ICONIC": "Скрыть Iconic",
+  "INTERFACE/HACK_HIDE_ROBSVAULT": "",
+  "INTERFACE/HACK_HIDE_ROBSVAULT/TIP": "",
   "SPEEDHACK": "Спидхак",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK": "Включить",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK/TIP": "Глобально меняет скорость всей игры на выставленный множитель",
@@ -707,6 +720,8 @@
   "STATUS/CLOCK/DROPDOWN/TWELVE_HOUR": "12-ти часовая система (AM/PM)",
   "STATUS/FRAME/ENABLED": "Счётчик кадров",
   "STATUS/POSITION/ENABLED": "Позиция",
+  "STATUS/VELOCITY/ENABLED": "",
+  "STATUS/DEAD/ENABLED": "",
   "STATUS/REPLAY_STATE/ENABLED": "Состояние воспроизведения",
   "STATUS/SESSION_TIME/ENABLED": "Время сессии",
   "REPLAY": "Макрос",
