--- a/langs/uk-UA.json
+++ b/langs/uk-UA.json
@@ -34,6 +34,7 @@
   "MESSAGE/REPLAY/CONVERT_SUCCESS": "Макрос успішно конвертовано! Ви можете знайти його разом з іншими макросами",
   "MESSAGE/REPLAY/SAVE": "Ви дійсно хочете зберегти зміни в цьому макросі?",
   "MESSAGE/KEYBINDS/EMPTY": "Будь ласка, спершу введіть гарячу клавішу",
+  "MESSAGE/KEYBINDS/UNBINDABLE": "",
   "ICONIC/DISABLE": "",
   "ICONIC/EFFECTS": "",
   "ICONIC/GENERAL": "",
@@ -97,6 +98,10 @@
   "BYPASS": "Байпаси",
   "BYPASS/HACK_ANTI_KICK": "",
   "BYPASS/HACK_ANTI_KICK/TIP": "",
+  "BYPASS/HACK_CHALLENGE": "",
+  "BYPASS/HACK_CHALLENGE/TIP": "",
+  "BYPASS/HACK_KEYMASTER": "",
+  "BYPASS/HACK_KEYMASTER/TIP": "",
   "BYPASS/HACK_MAIN_LEVELS": "Офіційні рівні",
   "BYPASS/HACK_MAIN_LEVELS/TIP": "Відкриває офіційні демони",
   "BYPASS/HACK_MUSIC_UNLOCKER": "Розблокувальник музики",
@@ -348,6 +353,10 @@
   "LEVEL/HACK_AUTO_START_POS/TIP": "Автоматично ставить стартові позиції на порталах",
   "LEVEL/CBF/HACK_CBF": "Click Between Frames",
   "LEVEL/CBF/HACK_CBF/TIP": "Вмикає мод «Click Between Frames» від Syzzi (ви повинні встановити мод, щоб користуватися ним!)",
+  "LEVEL/CBF/HACK_CBF_VANILLA": "",
+  "LEVEL/CBF/HACK_CBF_VANILLA/TIP": "",
+  "LEVEL/CBF/HACK_COS_VANILLA": "",
+  "LEVEL/CBF/HACK_COS_VANILLA/TIP": "",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "Click on Steps",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "Реєструє вхідні сигнали чітко у 240 TPS, зберігаючи традиційну фізику.",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Байпас чекпоінтів",
@@ -446,6 +455,7 @@
   "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX/TIP": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/FILL": "Заливка хітбоксів",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/HIDE_USED": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/HAZARDS/CHECKBOX": "Перешкоди",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY": "Прозорість",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY/PRE": "Прозорість",
@@ -453,6 +463,7 @@
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PASSABLE/CHECKBOX": "Проходимі тіла",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER": "Гравець",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER_COLLISION": "",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER_ROTATION": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SECTION": "Показати тільки активні",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SOLIDS/CHECKBOX": "Тверді тіла",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SPECIALS/CHECKBOX": "Особливі тіла",
@@ -578,6 +589,8 @@
   "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "Приховати додат. інформ. на екрані проходження",
   "INTERFACE/HACK_HIDE_MENU_SNOW": "Приховати сніг у меню",
   "INTERFACE/HACK_HIDE_PAUSE_ICONIC": "Приховати інтерфейс іконок при паузі",
+  "INTERFACE/HACK_HIDE_ROBSVAULT": "",
+  "INTERFACE/HACK_HIDE_ROBSVAULT/TIP": "",
   "SPEEDHACK": "Спідхак",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK": "Увімкнений",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK/TIP": "Змінює швидкість гри в певну кількість разів",
@@ -707,6 +720,8 @@
   "STATUS/CLOCK/DROPDOWN/TWELVE_HOUR": "12-годинний формат",
   "STATUS/FRAME/ENABLED": "Лічильник кадрів",
   "STATUS/POSITION/ENABLED": "Позиція",
+  "STATUS/VELOCITY/ENABLED": "",
+  "STATUS/DEAD/ENABLED": "",
   "STATUS/REPLAY_STATE/ENABLED": "Стан повторного перегляду",
   "STATUS/SESSION_TIME/ENABLED": "",
   "REPLAY": "Повторний перегляд",
