--- a/langs/vi-VN.json
+++ b/langs/vi-VN.json
@@ -34,6 +34,7 @@
   "MESSAGE/REPLAY/CONVERT_SUCCESS": "Chuyển đổi macro thành công! Tìm nó với các macro khác của bạn",
   "MESSAGE/REPLAY/SAVE": "Bạn có muốn lưu thay đổi đã thực hiện với macro không?",
   "MESSAGE/KEYBINDS/EMPTY": "Vui lòng nhập phím tắt trước",
+  "MESSAGE/KEYBINDS/UNBINDABLE": "",
   "ICONIC/DISABLE": "",
   "ICONIC/EFFECTS": "",
   "ICONIC/GENERAL": "",
@@ -97,6 +98,10 @@
   "BYPASS": "Bypass",
   "BYPASS/HACK_ANTI_KICK": "Anti-Kick",
   "BYPASS/HACK_ANTI_KICK/TIP": "Ngăn bạn bị đá khi chơi các level nhất định",
+  "BYPASS/HACK_CHALLENGE": "",
+  "BYPASS/HACK_CHALLENGE/TIP": "",
+  "BYPASS/HACK_KEYMASTER": "",
+  "BYPASS/HACK_KEYMASTER/TIP": "",
   "BYPASS/HACK_MAIN_LEVELS": "Các level chính",
   "BYPASS/HACK_MAIN_LEVELS/TIP": "Mở khóa các demon level",
   "BYPASS/HACK_MUSIC_UNLOCKER": "Mở khóa nhạc",
@@ -348,6 +353,10 @@
   "LEVEL/HACK_AUTO_START_POS/TIP": "Tự động đặt vị trí của StartPos ngay ở portal",
   "LEVEL/CBF/HACK_CBF": "Click Between Frames",
   "LEVEL/CBF/HACK_CBF/TIP": "Bật và tắt mod Click Between Frames của Syzzi (phải được cài trước)",
+  "LEVEL/CBF/HACK_CBF_VANILLA": "",
+  "LEVEL/CBF/HACK_CBF_VANILLA/TIP": "",
+  "LEVEL/CBF/HACK_COS_VANILLA": "",
+  "LEVEL/CBF/HACK_COS_VANILLA/TIP": "",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "Click trên các Bước",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "Chỉ nhận input với 240 TPS, giữ physics của game",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Tắt giới hạn checkpoint",
@@ -446,6 +455,7 @@
   "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX": "Hiện căn lề theo Trục ",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX/TIP": "Hiển thị Hitbox được căn theo trục trên các object được xoay cùng với hitbox của chúng",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/FILL": "Tô đầy Hitbox",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/HIDE_USED": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/HAZARDS/CHECKBOX": "Các chướng ngại vật",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY": "Độ mờ",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY/PRE": "Độ mờ",
@@ -453,6 +463,7 @@
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PASSABLE/CHECKBOX": "Vượt qua được",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER": "Người chơi",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER_COLLISION": "Khối Va chạm của Player",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER_ROTATION": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SECTION": "Chỉ hiện Active",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SOLIDS/CHECKBOX": "Cứng",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SPECIALS/CHECKBOX": "Đặc biệt",
@@ -578,6 +589,8 @@
   "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "Ẩn Thêm ở Màn Hình Kết Thúc",
   "INTERFACE/HACK_HIDE_MENU_SNOW": "Tắt Menu Tuyết",
   "INTERFACE/HACK_HIDE_PAUSE_ICONIC": "Tắt Iconic khi Dừng",
+  "INTERFACE/HACK_HIDE_ROBSVAULT": "",
+  "INTERFACE/HACK_HIDE_ROBSVAULT/TIP": "",
   "SPEEDHACK": "Speedhack",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK": "Bật",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK/TIP": "Làm chậm/nhanh game theo một hệ số nhân nhất định",
@@ -707,6 +720,8 @@
   "STATUS/CLOCK/DROPDOWN/TWELVE_HOUR": "12-giờ",
   "STATUS/FRAME/ENABLED": "Bộ Đếm Khung Hình",
   "STATUS/POSITION/ENABLED": "Vị trí",
+  "STATUS/VELOCITY/ENABLED": "",
+  "STATUS/DEAD/ENABLED": "",
   "STATUS/REPLAY_STATE/ENABLED": "Trạng Thái Phát Lại",
   "STATUS/SESSION_TIME/ENABLED": "Thời gian chơi theo phiên",
   "REPLAY": "Phát lại",
