--- a/langs/zh-CN.json
+++ b/langs/zh-CN.json
@@ -34,6 +34,7 @@
   "MESSAGE/REPLAY/CONVERT_SUCCESS": "macro转换成功!可在其他宏中找到",
   "MESSAGE/REPLAY/SAVE": "是否要保存对宏的更改?",
   "MESSAGE/KEYBINDS/EMPTY": "请先输入快捷键",
+  "MESSAGE/KEYBINDS/UNBINDABLE": "",
   "ICONIC/DISABLE": "",
   "ICONIC/EFFECTS": "",
   "ICONIC/GENERAL": "",
@@ -97,6 +98,10 @@
   "BYPASS": "解除限制",
   "BYPASS/HACK_ANTI_KICK": "",
   "BYPASS/HACK_ANTI_KICK/TIP": "",
+  "BYPASS/HACK_CHALLENGE": "",
+  "BYPASS/HACK_CHALLENGE/TIP": "",
+  "BYPASS/HACK_KEYMASTER": "",
+  "BYPASS/HACK_KEYMASTER/TIP": "",
   "BYPASS/HACK_MAIN_LEVELS": "主关卡",
   "BYPASS/HACK_MAIN_LEVELS/TIP": "解锁所有官方关卡",
   "BYPASS/HACK_MUSIC_UNLOCKER": "音乐自定义",
@@ -348,6 +353,10 @@
   "LEVEL/HACK_AUTO_START_POS/TIP": "",
   "LEVEL/CBF/HACK_CBF": "Click Between Frames",
   "LEVEL/CBF/HACK_CBF/TIP": "开关 Syzzi 的CBF(须已安装)",
+  "LEVEL/CBF/HACK_CBF_VANILLA": "",
+  "LEVEL/CBF/HACK_CBF_VANILLA/TIP": "",
+  "LEVEL/CBF/HACK_COS_VANILLA": "",
+  "LEVEL/CBF/HACK_COS_VANILLA/TIP": "",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "检查点解除限制",
@@ -446,6 +455,7 @@
   "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX/TIP": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/FILL": "填充碰撞箱",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/HIDE_USED": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/HAZARDS/CHECKBOX": "有害类",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY": "不透明度",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY/PRE": "不透明度",
@@ -453,6 +463,7 @@
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PASSABLE/CHECKBOX": "可通过",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER": "玩家",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER_COLLISION": "",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER_ROTATION": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SECTION": "显示激活部分",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SOLIDS/CHECKBOX": "方块类",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SPECIALS/CHECKBOX": "特殊类",
@@ -578,6 +589,8 @@
   "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "",
   "INTERFACE/HACK_HIDE_MENU_SNOW": "",
   "INTERFACE/HACK_HIDE_PAUSE_ICONIC": "",
+  "INTERFACE/HACK_HIDE_ROBSVAULT": "",
+  "INTERFACE/HACK_HIDE_ROBSVAULT/TIP": "",
   "SPEEDHACK": "变速",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK": "开启变速",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK/TIP": "666这个人加速",
@@ -707,6 +720,8 @@
   "STATUS/CLOCK/DROPDOWN/TWELVE_HOUR": "12时制",
   "STATUS/FRAME/ENABLED": "帧计数器",
   "STATUS/POSITION/ENABLED": "位置",
+  "STATUS/VELOCITY/ENABLED": "",
+  "STATUS/DEAD/ENABLED": "",
   "STATUS/REPLAY_STATE/ENABLED": "Repaly中",
   "STATUS/SESSION_TIME/ENABLED": "",
   "REPLAY": "Replay",
