--- a/langs/ar-SA.json
+++ b/langs/ar-SA.json
@@ -34,6 +34,7 @@
   "MESSAGE/REPLAY/CONVERT_SUCCESS": "تم تحويل الماكرو بنجاح! ستجده مع ماكرواتك الأخرى",
   "MESSAGE/REPLAY/SAVE": "هل تريد حفظ التغييرات على الماكرو الخاص بك؟",
   "MESSAGE/KEYBINDS/EMPTY": "الرجاء إدخال ربط مفتاح أولاً",
+  "MESSAGE/KEYBINDS/UNBINDABLE": "",
   "ICONIC/DISABLE": "",
   "ICONIC/EFFECTS": "",
   "ICONIC/GENERAL": "",
@@ -97,6 +98,10 @@
   "BYPASS": "تجاوز",
   "BYPASS/HACK_ANTI_KICK": "مضاد الطرد",
   "BYPASS/HACK_ANTI_KICK/TIP": "يمنع منعك من لعب مستويات معينة",
+  "BYPASS/HACK_CHALLENGE": "",
+  "BYPASS/HACK_CHALLENGE/TIP": "",
+  "BYPASS/HACK_KEYMASTER": "",
+  "BYPASS/HACK_KEYMASTER/TIP": "",
   "BYPASS/HACK_MAIN_LEVELS": "المستويات الرئيسية",
   "BYPASS/HACK_MAIN_LEVELS/TIP": "يفتح مستويات الشياطين الرئيسية",
   "BYPASS/HACK_MUSIC_UNLOCKER": "مخصص الموسيقى",
@@ -348,6 +353,10 @@
   "LEVEL/HACK_AUTO_START_POS/TIP": "يضع تلقائيًا نقاط بداية عند البوابات",
   "LEVEL/CBF/HACK_CBF": "النقر بين الإطارات",
   "LEVEL/CBF/HACK_CBF/TIP": "يبدل خاصية Click Between Frames بواسطة Syzzi (يجب تثبيتها!)",
+  "LEVEL/CBF/HACK_CBF_VANILLA": "",
+  "LEVEL/CBF/HACK_CBF_VANILLA/TIP": "",
+  "LEVEL/CBF/HACK_COS_VANILLA": "",
+  "LEVEL/CBF/HACK_COS_VANILLA/TIP": "",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "النقر على الخطوات",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "يسجل المدخلات فقط بدقة 240 TPS، مع الحفاظ على الفيزياء الأساسية",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "تجاوز حد نقاط التحقق",
@@ -446,6 +455,7 @@
   "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX": "إظهار المحاذاة مع المحور",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX/TIP": "يعرض حدود الاصطدام المحاذية مع المحور على الكائنات المدورة إلى جانب حدود الاصطدام الموجهة",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/FILL": "ملء حدود الاصطدام",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/HIDE_USED": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/HAZARDS/CHECKBOX": "المخاطر",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY": "العتمة",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY/PRE": "العتمة",
@@ -453,6 +463,7 @@
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PASSABLE/CHECKBOX": "القابل للعبور",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER": "اللاعب",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER_COLLISION": "كتلة تصادم اللاعب",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER_ROTATION": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SECTION": "إظهار النشط فقط",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SOLIDS/CHECKBOX": "الصلبة",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SPECIALS/CHECKBOX": "الخاصة",
@@ -578,6 +589,8 @@
   "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "إخفاء الإضافات في شاشة النهاية",
   "INTERFACE/HACK_HIDE_MENU_SNOW": "إخفاء ثلج القائمة",
   "INTERFACE/HACK_HIDE_PAUSE_ICONIC": "إخفاء Iconic عند الإيقاف المؤقت",
+  "INTERFACE/HACK_HIDE_ROBSVAULT": "",
+  "INTERFACE/HACK_HIDE_ROBSVAULT/TIP": "",
   "SPEEDHACK": "تعديل السرعة",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK": "مفعّل",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK/TIP": "يبطئ اللعبة عالميًا بمضاعف محدد",
@@ -707,6 +720,8 @@
   "STATUS/CLOCK/DROPDOWN/TWELVE_HOUR": "12 ساعة",
   "STATUS/FRAME/ENABLED": "عداد الإطارات",
   "STATUS/POSITION/ENABLED": "الموضع",
+  "STATUS/VELOCITY/ENABLED": "",
+  "STATUS/DEAD/ENABLED": "",
   "STATUS/REPLAY_STATE/ENABLED": "حالة إعادة التشغيل",
   "STATUS/SESSION_TIME/ENABLED": "وقت الجلسة",
   "REPLAY": "إعادة التشغيل",
