--- a/langs/es-CO.json
+++ b/langs/es-CO.json
@@ -34,6 +34,7 @@
   "MESSAGE/REPLAY/CONVERT_SUCCESS": "Macro convertida exitosamente! Encuéntrela junto a sus otras macros",
   "MESSAGE/REPLAY/SAVE": "",
   "MESSAGE/KEYBINDS/EMPTY": "Keybinds Vacias.",
+  "MESSAGE/KEYBINDS/UNBINDABLE": "",
   "ICONIC/DISABLE": "",
   "ICONIC/EFFECTS": "",
   "ICONIC/GENERAL": "",
@@ -97,6 +98,10 @@
   "BYPASS": "Bypass",
   "BYPASS/HACK_ANTI_KICK": "",
   "BYPASS/HACK_ANTI_KICK/TIP": "",
+  "BYPASS/HACK_CHALLENGE": "",
+  "BYPASS/HACK_CHALLENGE/TIP": "",
+  "BYPASS/HACK_KEYMASTER": "",
+  "BYPASS/HACK_KEYMASTER/TIP": "",
   "BYPASS/HACK_MAIN_LEVELS": "Niveles Principales",
   "BYPASS/HACK_MAIN_LEVELS/TIP": "Desbloquee los niveles demon principales",
   "BYPASS/HACK_MUSIC_UNLOCKER": "Personalizador de Música",
@@ -348,6 +353,10 @@
   "LEVEL/HACK_AUTO_START_POS/TIP": "",
   "LEVEL/CBF/HACK_CBF": "",
   "LEVEL/CBF/HACK_CBF/TIP": "",
+  "LEVEL/CBF/HACK_CBF_VANILLA": "",
+  "LEVEL/CBF/HACK_CBF_VANILLA/TIP": "",
+  "LEVEL/CBF/HACK_COS_VANILLA": "",
+  "LEVEL/CBF/HACK_COS_VANILLA/TIP": "",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Bypass Límite de Checkpoints",
@@ -446,6 +455,7 @@
   "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX/TIP": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/FILL": "Rellenar Hitboxes",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/HIDE_USED": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/HAZARDS/CHECKBOX": "Peligros",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY": "Opacidad",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY/PRE": "Opacidad",
@@ -453,6 +463,7 @@
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PASSABLE/CHECKBOX": "Pasable",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER": "Jugador",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER_COLLISION": "",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER_ROTATION": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SECTION": "Mostrar Solo Activos",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SOLIDS/CHECKBOX": "Sólidos",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SPECIALS/CHECKBOX": "Especiales",
@@ -578,6 +589,8 @@
   "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "",
   "INTERFACE/HACK_HIDE_MENU_SNOW": "",
   "INTERFACE/HACK_HIDE_PAUSE_ICONIC": "",
+  "INTERFACE/HACK_HIDE_ROBSVAULT": "",
+  "INTERFACE/HACK_HIDE_ROBSVAULT/TIP": "",
   "SPEEDHACK": "Speedhack",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK": "Activado",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK/TIP": "Ralentiza el juego globalmente por un multiplicador",
@@ -707,6 +720,8 @@
   "STATUS/CLOCK/DROPDOWN/TWELVE_HOUR": "12 horas",
   "STATUS/FRAME/ENABLED": "Contador de fotogrmas",
   "STATUS/POSITION/ENABLED": "Posicion",
+  "STATUS/VELOCITY/ENABLED": "",
+  "STATUS/DEAD/ENABLED": "",
   "STATUS/REPLAY_STATE/ENABLED": "Estado de repeticion",
   "STATUS/SESSION_TIME/ENABLED": "",
   "REPLAY": "Repeticion",
