--- a/langs/es-ES.json
+++ b/langs/es-ES.json
@@ -34,6 +34,7 @@
   "MESSAGE/REPLAY/CONVERT_SUCCESS": "¡Macro convertido correctamente! Encuéntralo junto a tus otros macros",
   "MESSAGE/REPLAY/SAVE": "¿Quieres guardar los cambios realizados en la macro?",
   "MESSAGE/KEYBINDS/EMPTY": "Por favor, tienes que establecer primero un atajo de teclado",
+  "MESSAGE/KEYBINDS/UNBINDABLE": "",
   "ICONIC/DISABLE": "Desactivar",
   "ICONIC/EFFECTS": "Efectos",
   "ICONIC/GENERAL": "General",
@@ -97,6 +98,10 @@
   "BYPASS": "Bypass",
   "BYPASS/HACK_ANTI_KICK": "Anti-expulsión",
   "BYPASS/HACK_ANTI_KICK/TIP": "Previene ser bloqueado de jugar ciertos niveles",
+  "BYPASS/HACK_CHALLENGE": "",
+  "BYPASS/HACK_CHALLENGE/TIP": "",
+  "BYPASS/HACK_KEYMASTER": "",
+  "BYPASS/HACK_KEYMASTER/TIP": "",
   "BYPASS/HACK_MAIN_LEVELS": "Niveles principales",
   "BYPASS/HACK_MAIN_LEVELS/TIP": "Desbloquea los niveles demons principales",
   "BYPASS/HACK_MUSIC_UNLOCKER": "Desbloquear música",
@@ -348,6 +353,10 @@
   "LEVEL/HACK_AUTO_START_POS/TIP": "Coloca automáticamente los StartPos en los portales",
   "LEVEL/CBF/HACK_CBF": "Click Between Frames",
   "LEVEL/CBF/HACK_CBF/TIP": "Interruptor para el «Click Between Frames» de Syzzi (¡debe estar instalado!)",
+  "LEVEL/CBF/HACK_CBF_VANILLA": "",
+  "LEVEL/CBF/HACK_CBF_VANILLA/TIP": "",
+  "LEVEL/CBF/HACK_COS_VANILLA": "",
+  "LEVEL/CBF/HACK_COS_VANILLA/TIP": "",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "Click on Steps",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "Registra los inputs con una precisión de 240 TPS, manteniendo las físicas Vanilla",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Deslimitar cantidad de checkpoints",
@@ -446,6 +455,7 @@
   "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX": "Hitbox alineada al eje",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX/TIP": "Muestra la hitbox alineada al eje de los objetos rotados junto a su hitbox rotada",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/FILL": "Rellenar hitboxes",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/HIDE_USED": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/HAZARDS/CHECKBOX": "Obstáculos",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY": "Opacidad",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY/PRE": "Opacidad ",
@@ -453,6 +463,7 @@
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PASSABLE/CHECKBOX": "Atravesable",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER": "Jugador",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER_COLLISION": "Bloque de colisión del jugador",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER_ROTATION": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SECTION": "Mostrar solo los activados",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SOLIDS/CHECKBOX": "Sólidos",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SPECIALS/CHECKBOX": "Especiales",
@@ -578,6 +589,8 @@
   "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "Esconder extras en pantalla final",
   "INTERFACE/HACK_HIDE_MENU_SNOW": "Esconder nieve en el menú",
   "INTERFACE/HACK_HIDE_PAUSE_ICONIC": "Esconder «Iconic» en el menú de pausa",
+  "INTERFACE/HACK_HIDE_ROBSVAULT": "",
+  "INTERFACE/HACK_HIDE_ROBSVAULT/TIP": "",
   "SPEEDHACK": "Speedhack",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK": "Activar",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK/TIP": "Permite modificar la velocidad del juego",
@@ -707,6 +720,8 @@
   "STATUS/CLOCK/DROPDOWN/TWELVE_HOUR": "Modo 12 horas",
   "STATUS/FRAME/ENABLED": "Contador de fotogramas",
   "STATUS/POSITION/ENABLED": "Posición",
+  "STATUS/VELOCITY/ENABLED": "",
+  "STATUS/DEAD/ENABLED": "",
   "STATUS/REPLAY_STATE/ENABLED": "Estado de replay",
   "STATUS/SESSION_TIME/ENABLED": "Tiempo de sesión",
   "REPLAY": "Replay",
