--- a/langs/fr-FR.json
+++ b/langs/fr-FR.json
@@ -34,6 +34,7 @@
   "MESSAGE/REPLAY/CONVERT_SUCCESS": "Macro convertie avec succès ! Vous pouvez la retrouver avec vos autres macros",
   "MESSAGE/REPLAY/SAVE": "Voulez-vous enregistrer les changements de la macro ?",
   "MESSAGE/KEYBINDS/EMPTY": "Veuillez saisir un raccourci d'abord",
+  "MESSAGE/KEYBINDS/UNBINDABLE": "",
   "ICONIC/DISABLE": "",
   "ICONIC/EFFECTS": "",
   "ICONIC/GENERAL": "",
@@ -97,6 +98,10 @@
   "BYPASS": "Bypass",
   "BYPASS/HACK_ANTI_KICK": "Anti-Kick",
   "BYPASS/HACK_ANTI_KICK/TIP": "Empêche d'être bloqué en lançant certains niveaux",
+  "BYPASS/HACK_CHALLENGE": "",
+  "BYPASS/HACK_CHALLENGE/TIP": "",
+  "BYPASS/HACK_KEYMASTER": "",
+  "BYPASS/HACK_KEYMASTER/TIP": "",
   "BYPASS/HACK_MAIN_LEVELS": "Niveaux Démons Officiels",
   "BYPASS/HACK_MAIN_LEVELS/TIP": "Débloque les niveaux Démons Officiels",
   "BYPASS/HACK_MUSIC_UNLOCKER": "Déblocage des musiques",
@@ -348,6 +353,10 @@
   "LEVEL/HACK_AUTO_START_POS/TIP": "Place automatiquement une StartPos aux portails",
   "LEVEL/CBF/HACK_CBF": "Click Between Frames",
   "LEVEL/CBF/HACK_CBF/TIP": "Active/Désactive le mod Click Between Frames de Syzzi (doit être installé !)",
+  "LEVEL/CBF/HACK_CBF_VANILLA": "",
+  "LEVEL/CBF/HACK_CBF_VANILLA/TIP": "",
+  "LEVEL/CBF/HACK_COS_VANILLA": "",
+  "LEVEL/CBF/HACK_COS_VANILLA/TIP": "",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "Clique aux étapes",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "N'enregistre que les inputs avec une précision de 240 TPS, en conservant la physique d'origine.",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Limite de Checkpoints",
@@ -446,6 +455,7 @@
   "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX": "Afficher les axes",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX/TIP": "Affiche la hitbox alignée sur les axes des objets pivotés, ainsi que leur hitbox orientée.",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/FILL": "Remplir les Hitboxes",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/HIDE_USED": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/HAZARDS/CHECKBOX": "Dangers",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY": "Opacité ",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY/PRE": "Opacité ",
@@ -453,6 +463,7 @@
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PASSABLE/CHECKBOX": "Objets Passables",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER": "Joueur",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER_COLLISION": "Bloc de collision joueur",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER_ROTATION": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SECTION": "Afficher uniquement actifs",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SOLIDS/CHECKBOX": "Objets Solides",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SPECIALS/CHECKBOX": "Objets Spéciaux",
@@ -578,6 +589,8 @@
   "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "Masquer les extras à la fin",
   "INTERFACE/HACK_HIDE_MENU_SNOW": "Cacher la neige",
   "INTERFACE/HACK_HIDE_PAUSE_ICONIC": "Cacher icone MH en pause",
+  "INTERFACE/HACK_HIDE_ROBSVAULT": "",
+  "INTERFACE/HACK_HIDE_ROBSVAULT/TIP": "",
   "SPEEDHACK": "SpeedHack",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK": "Activer",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK/TIP": "Permet de contrôler la vitesse du jeu",
@@ -707,6 +720,8 @@
   "STATUS/CLOCK/DROPDOWN/TWELVE_HOUR": "12 heures",
   "STATUS/FRAME/ENABLED": "Compteur d'images",
   "STATUS/POSITION/ENABLED": "Position",
+  "STATUS/VELOCITY/ENABLED": "",
+  "STATUS/DEAD/ENABLED": "",
   "STATUS/REPLAY_STATE/ENABLED": "État du Replay",
   "STATUS/SESSION_TIME/ENABLED": "Durée totale en jeu",
   "REPLAY": "Replay",
