--- a/langs/ja-JP.json
+++ b/langs/ja-JP.json
@@ -34,6 +34,7 @@
   "MESSAGE/REPLAY/CONVERT_SUCCESS": "",
   "MESSAGE/REPLAY/SAVE": "",
   "MESSAGE/KEYBINDS/EMPTY": "",
+  "MESSAGE/KEYBINDS/UNBINDABLE": "",
   "ICONIC/DISABLE": "",
   "ICONIC/EFFECTS": "",
   "ICONIC/GENERAL": "",
@@ -97,6 +98,10 @@
   "BYPASS": "バイパス",
   "BYPASS/HACK_ANTI_KICK": "",
   "BYPASS/HACK_ANTI_KICK/TIP": "",
+  "BYPASS/HACK_CHALLENGE": "",
+  "BYPASS/HACK_CHALLENGE/TIP": "",
+  "BYPASS/HACK_KEYMASTER": "",
+  "BYPASS/HACK_KEYMASTER/TIP": "",
   "BYPASS/HACK_MAIN_LEVELS": "メインレベル",
   "BYPASS/HACK_MAIN_LEVELS/TIP": "メインのデーモンレベルをアンロックします",
   "BYPASS/HACK_MUSIC_UNLOCKER": "音楽アンロッカー",
@@ -348,6 +353,10 @@
   "LEVEL/HACK_AUTO_START_POS/TIP": "",
   "LEVEL/CBF/HACK_CBF": "",
   "LEVEL/CBF/HACK_CBF/TIP": "",
+  "LEVEL/CBF/HACK_CBF_VANILLA": "",
+  "LEVEL/CBF/HACK_CBF_VANILLA/TIP": "",
+  "LEVEL/CBF/HACK_COS_VANILLA": "",
+  "LEVEL/CBF/HACK_COS_VANILLA/TIP": "",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "チェックポイント制限解除",
@@ -446,6 +455,7 @@
   "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX/TIP": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/FILL": "ヒットボックス塗りつぶし",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/HIDE_USED": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/HAZARDS/CHECKBOX": "ハザード",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY": "不透明度",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY/PRE": "不透明度",
@@ -453,6 +463,7 @@
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PASSABLE/CHECKBOX": "通過可能",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER": "プレイヤー",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER_COLLISION": "",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER_ROTATION": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SECTION": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SOLIDS/CHECKBOX": "ソリッド",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SPECIALS/CHECKBOX": "スペシャル",
@@ -578,6 +589,8 @@
   "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "",
   "INTERFACE/HACK_HIDE_MENU_SNOW": "メニュー画面の雪を非表示",
   "INTERFACE/HACK_HIDE_PAUSE_ICONIC": "",
+  "INTERFACE/HACK_HIDE_ROBSVAULT": "",
+  "INTERFACE/HACK_HIDE_ROBSVAULT/TIP": "",
   "SPEEDHACK": "",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK": "速度ハック",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK/TIP": "",
@@ -707,6 +720,8 @@
   "STATUS/CLOCK/DROPDOWN/TWELVE_HOUR": "12時間表示",
   "STATUS/FRAME/ENABLED": "",
   "STATUS/POSITION/ENABLED": "",
+  "STATUS/VELOCITY/ENABLED": "",
+  "STATUS/DEAD/ENABLED": "",
   "STATUS/REPLAY_STATE/ENABLED": "",
   "STATUS/SESSION_TIME/ENABLED": "",
   "REPLAY": "リプレイ",
