--- a/langs/pl-PL.json
+++ b/langs/pl-PL.json
@@ -34,6 +34,7 @@
   "MESSAGE/REPLAY/CONVERT_SUCCESS": "Pomyślnie przekonwertowano makro! Znajdziesz je razem z innymi makrami",
   "MESSAGE/REPLAY/SAVE": "Czy chcesz zapisać zmiany w swoim makro?",
   "MESSAGE/KEYBINDS/EMPTY": "Najpierw wprowadź skrót klawiszowy",
+  "MESSAGE/KEYBINDS/UNBINDABLE": "",
   "ICONIC/DISABLE": "",
   "ICONIC/EFFECTS": "",
   "ICONIC/GENERAL": "",
@@ -97,6 +98,10 @@
   "BYPASS": "Obejścia",
   "BYPASS/HACK_ANTI_KICK": "",
   "BYPASS/HACK_ANTI_KICK/TIP": "",
+  "BYPASS/HACK_CHALLENGE": "",
+  "BYPASS/HACK_CHALLENGE/TIP": "",
+  "BYPASS/HACK_KEYMASTER": "",
+  "BYPASS/HACK_KEYMASTER/TIP": "",
   "BYPASS/HACK_MAIN_LEVELS": "Główne poziomy",
   "BYPASS/HACK_MAIN_LEVELS/TIP": "Odblokowuje główne demony",
   "BYPASS/HACK_MUSIC_UNLOCKER": "Music Customiser",
@@ -348,6 +353,10 @@
   "LEVEL/HACK_AUTO_START_POS/TIP": "Automatycznie kładzie StartPosy na portalach",
   "LEVEL/CBF/HACK_CBF": "Click Between Frames",
   "LEVEL/CBF/HACK_CBF/TIP": "Włącza/wyłącza Click Between Frames autorstwa Syzzi (musi być zainstalowane!)",
+  "LEVEL/CBF/HACK_CBF_VANILLA": "",
+  "LEVEL/CBF/HACK_CBF_VANILLA/TIP": "",
+  "LEVEL/CBF/HACK_COS_VANILLA": "",
+  "LEVEL/CBF/HACK_COS_VANILLA/TIP": "",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "Click on Steps",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "Rejestruje wejścia z precyzją 240 TPS, zachowując fizykę gry bez modów",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Obejście Limitu Checkpointów",
@@ -446,6 +455,7 @@
   "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX/TIP": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/FILL": "Wypełnienie Hitboxów",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/HIDE_USED": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/HAZARDS/CHECKBOX": "Zagrożenia",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY": "Nieprzezroczystość",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY/PRE": "Nieprzezroczystość",
@@ -453,6 +463,7 @@
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PASSABLE/CHECKBOX": "Przenikalne",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER": "Gracz",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER_COLLISION": "",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER_ROTATION": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SECTION": "Pokaż Tylko Aktywne",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SOLIDS/CHECKBOX": "Stałe",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SPECIALS/CHECKBOX": "Specjalne",
@@ -578,6 +589,8 @@
   "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "",
   "INTERFACE/HACK_HIDE_MENU_SNOW": "",
   "INTERFACE/HACK_HIDE_PAUSE_ICONIC": "",
+  "INTERFACE/HACK_HIDE_ROBSVAULT": "",
+  "INTERFACE/HACK_HIDE_ROBSVAULT/TIP": "",
   "SPEEDHACK": "Speedhack",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK": "Włączony",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK/TIP": "Globalnie spowalnia grę o podany mnożnik",
@@ -707,6 +720,8 @@
   "STATUS/CLOCK/DROPDOWN/TWELVE_HOUR": "12-godzinny",
   "STATUS/FRAME/ENABLED": "Licznik Klatek",
   "STATUS/POSITION/ENABLED": "Pozycja",
+  "STATUS/VELOCITY/ENABLED": "",
+  "STATUS/DEAD/ENABLED": "",
   "STATUS/REPLAY_STATE/ENABLED": "Status Replay",
   "STATUS/SESSION_TIME/ENABLED": "",
   "REPLAY": "Replay",
