--- a/langs/pt-BR.json
+++ b/langs/pt-BR.json
@@ -34,6 +34,7 @@
   "MESSAGE/REPLAY/CONVERT_SUCCESS": "Macro convertido com sucesso! Encontre-o com seus outros macros",
   "MESSAGE/REPLAY/SAVE": "Você deseja salvar as mudanças feitas no macro atual?",
   "MESSAGE/KEYBINDS/EMPTY": "Por favor, adicione um atalho primeiro!",
+  "MESSAGE/KEYBINDS/UNBINDABLE": "",
   "ICONIC/DISABLE": "",
   "ICONIC/EFFECTS": "",
   "ICONIC/GENERAL": "",
@@ -97,6 +98,10 @@
   "BYPASS": "Bypass",
   "BYPASS/HACK_ANTI_KICK": "",
   "BYPASS/HACK_ANTI_KICK/TIP": "",
+  "BYPASS/HACK_CHALLENGE": "",
+  "BYPASS/HACK_CHALLENGE/TIP": "",
+  "BYPASS/HACK_KEYMASTER": "",
+  "BYPASS/HACK_KEYMASTER/TIP": "",
   "BYPASS/HACK_MAIN_LEVELS": "Fases principais",
   "BYPASS/HACK_MAIN_LEVELS/TIP": "Debloqueia todas as fases demons principais",
   "BYPASS/HACK_MUSIC_UNLOCKER": "Desbloqueador de música",
@@ -348,6 +353,10 @@
   "LEVEL/HACK_AUTO_START_POS/TIP": "Automaticamente coloca StartPos em portais",
   "LEVEL/CBF/HACK_CBF": "",
   "LEVEL/CBF/HACK_CBF/TIP": "Ativa o Click Between Frames do Syzzi (precisa estar instalado!)",
+  "LEVEL/CBF/HACK_CBF_VANILLA": "",
+  "LEVEL/CBF/HACK_CBF_VANILLA/TIP": "",
+  "LEVEL/CBF/HACK_COS_VANILLA": "",
+  "LEVEL/CBF/HACK_COS_VANILLA/TIP": "",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Bypass de Limite de Checkpoint",
@@ -446,6 +455,7 @@
   "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX/TIP": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/FILL": "Preencher Hitboxes",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/HIDE_USED": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/HAZARDS/CHECKBOX": "Perigos",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY": "Opacidade",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY/PRE": "Opacidade",
@@ -453,6 +463,7 @@
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PASSABLE/CHECKBOX": "Passável",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER": "Jogador",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER_COLLISION": "",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER_ROTATION": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SECTION": "Seção",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SOLIDS/CHECKBOX": "Sólidos",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SPECIALS/CHECKBOX": "Especiais",
@@ -578,6 +589,8 @@
   "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "",
   "INTERFACE/HACK_HIDE_MENU_SNOW": "",
   "INTERFACE/HACK_HIDE_PAUSE_ICONIC": "",
+  "INTERFACE/HACK_HIDE_ROBSVAULT": "",
+  "INTERFACE/HACK_HIDE_ROBSVAULT/TIP": "",
   "SPEEDHACK": "Speedhack",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK": "Ativado",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK/TIP": "",
@@ -707,6 +720,8 @@
   "STATUS/CLOCK/DROPDOWN/TWELVE_HOUR": "12 horas",
   "STATUS/FRAME/ENABLED": "Contador de frames",
   "STATUS/POSITION/ENABLED": "Posição",
+  "STATUS/VELOCITY/ENABLED": "",
+  "STATUS/DEAD/ENABLED": "",
   "STATUS/REPLAY_STATE/ENABLED": "Estado do Replay",
   "STATUS/SESSION_TIME/ENABLED": "",
   "REPLAY": "",
