--- a/langs/tr-TR.json
+++ b/langs/tr-TR.json
@@ -34,6 +34,7 @@
   "MESSAGE/REPLAY/CONVERT_SUCCESS": "Makro başarıyla dönüştürüldü! Diğer makrolarınızla birlikte bulabilirsiniz.",
   "MESSAGE/REPLAY/SAVE": "Makroya yaptığınız değişiklikleri kaydetmek ister misiniz?",
   "MESSAGE/KEYBINDS/EMPTY": "Öncelikle lütfen bir tuş atayınız",
+  "MESSAGE/KEYBINDS/UNBINDABLE": "",
   "ICONIC/DISABLE": "",
   "ICONIC/EFFECTS": "",
   "ICONIC/GENERAL": "",
@@ -97,6 +98,10 @@
   "BYPASS": "Baypas",
   "BYPASS/HACK_ANTI_KICK": "",
   "BYPASS/HACK_ANTI_KICK/TIP": "",
+  "BYPASS/HACK_CHALLENGE": "",
+  "BYPASS/HACK_CHALLENGE/TIP": "",
+  "BYPASS/HACK_KEYMASTER": "",
+  "BYPASS/HACK_KEYMASTER/TIP": "",
   "BYPASS/HACK_MAIN_LEVELS": "Ana Seviyeler",
   "BYPASS/HACK_MAIN_LEVELS/TIP": "Ana demon seviyelerin kilidini açar",
   "BYPASS/HACK_MUSIC_UNLOCKER": "Müzik Özelleştirici",
@@ -348,6 +353,10 @@
   "LEVEL/HACK_AUTO_START_POS/TIP": "StartPos'ları otomatik olarak portallara yerleştirir",
   "LEVEL/CBF/HACK_CBF": "",
   "LEVEL/CBF/HACK_CBF/TIP": "",
+  "LEVEL/CBF/HACK_CBF_VANILLA": "",
+  "LEVEL/CBF/HACK_CBF_VANILLA/TIP": "",
+  "LEVEL/CBF/HACK_COS_VANILLA": "",
+  "LEVEL/CBF/HACK_COS_VANILLA/TIP": "",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "Click on Steps",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "Girişleri yalnızca 240 TPS hassassiyetle algılar, sıradan fiziği korur.",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Checkpoint Limit Baypas",
@@ -446,6 +455,7 @@
   "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX/TIP": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/FILL": "Hitboxları Doldur",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/HIDE_USED": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/HAZARDS/CHECKBOX": "Tehlikeler",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY": "Opaklık",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY/PRE": "Opaklık",
@@ -453,6 +463,7 @@
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PASSABLE/CHECKBOX": "Geçilebilir",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER": "Oyuncu",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER_COLLISION": "",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER_ROTATION": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SECTION": "Sadece Aktif Göster",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SOLIDS/CHECKBOX": "Katılar",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SPECIALS/CHECKBOX": "Özeller",
@@ -578,6 +589,8 @@
   "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "",
   "INTERFACE/HACK_HIDE_MENU_SNOW": "",
   "INTERFACE/HACK_HIDE_PAUSE_ICONIC": "",
+  "INTERFACE/HACK_HIDE_ROBSVAULT": "",
+  "INTERFACE/HACK_HIDE_ROBSVAULT/TIP": "",
   "SPEEDHACK": "Hız Hilesi",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK": "Açık",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK/TIP": "Oyunu tamamamen belirlenen çarpanla yavaşlatır",
@@ -707,6 +720,8 @@
   "STATUS/CLOCK/DROPDOWN/TWELVE_HOUR": "12 Saatlik",
   "STATUS/FRAME/ENABLED": "Frame Sayacı",
   "STATUS/POSITION/ENABLED": "Pozisyon",
+  "STATUS/VELOCITY/ENABLED": "",
+  "STATUS/DEAD/ENABLED": "",
   "STATUS/REPLAY_STATE/ENABLED": "Makro Durumu",
   "STATUS/SESSION_TIME/ENABLED": "",
   "REPLAY": "Makro",
