--- a/langs/ko-KR.json
+++ b/langs/ko-KR.json
@@ -169,7 +169,7 @@
   "COSMETIC/NO_PARTICLES/DROPDOWN/0": "부스트 이펙트",
   "COSMETIC/NO_PARTICLES/DROPDOWN/1": "버블 이펙트",
   "COSMETIC/NO_PARTICLES/DROPDOWN/2": "충격 이펙트",
-  "COSMETIC/NO_PARTICLES/DROPDOWN/3": "터짐 이펙트",
+  "COSMETIC/NO_PARTICLES/DROPDOWN/3": "발판 이펙트",
   "COSMETIC/NO_PARTICLES/DROPDOWN/4": "상자 이펙트",
   "COSMETIC/NO_PARTICLES/DROPDOWN/5": "코인 이펙트",
   "COSMETIC/NO_PARTICLES/DROPDOWN/6": "대시 이펙트",
